[package]
name = "much"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mgeier/much"
description = "Handling Multi-Channel Audio Signals"
keywords = ["multi-channel", "audio"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
ndarray = ["dep:ndarray"]

[dependencies]
ndarray = { version = "0.17", optional = true }
